Padronização da largura dos cartões de planos

--- a/src/app/modais/planos/planos.component.scss
+++ b/src/app/modais/planos/planos.component.scss
@@ -12,6 +12,9 @@
     width: 800px;
     .card {
       text-align: center;
+      width: 220px;
+      padding: 10px;
+      box-shadow: 0px 11px 13px 4px rgba(0,0,0,0.1);
     }
   }
 }
