--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.scss
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.scss
@@ -8,6 +8,8 @@
 // Espaçamento entro os ícones da tabela
 .icon-spacing {
     margin-right: 0.5rem;
+    width: 40px;
+    height: 40px;
 }
 
 .icon-color {
