--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -39,28 +39,30 @@
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
-          <mat-icon class="icon-color">visibility_off</mat-icon>
-        </button>
-        <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
           <mat-icon color="primary"> border_color</mat-icon>
         </button>
         <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
           <mat-icon color="warn">delete</mat-icon>
         </button>
-        <button mat-icon-button aria-label="ícone Button">
-          <mat-icon class="icon-color">confirmation_number</mat-icon>
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+          <mat-icon>more_vert</mat-icon>
         </button>
+        <mat-menu #menu="matMenu">
+          <button mat-icon-button aria-label="ícone Button" class="iconmenu">
+            <mat-icon class="icon-color">visibility_off</mat-icon>
+            <span>Exibir Produto</span>
+          </button>
+          <button mat-icon-button aria-label="ícone Button" class="iconmenu">
+            <mat-icon class="icon-color">confirmation_number</mat-icon>
+            <span>Tornar Promocional</span>
+          </button>
+        </mat-menu>
       </td>
     </ng-container>
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <mat-paginator
-    [pageSizeOptions]="[5, 10, 20]"
-    showFirstLastButtons
-    aria-label="Selecionar página do produto"
-  >
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selecionar página do produto">
   </mat-paginator>
 </div>
