--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.scss
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.scss
@@ -58,3 +58,14 @@
   font-weight: bold;
   font-size: 1rem;
 }
+
+// Ícones dropdown
+.iconmenu {
+  width: 100%;
+  flex: none;
+  align-items: center;  
+  justify-items: center;
+  text-align: left;
+  padding: 5px;
+  display: flex;
+}
