--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -40,36 +40,52 @@
             <td mat-cell *matCellDef="let element">{{ element.preco }}</td>
         </ng-container>
 
-    <!-- Ícone da tabela -->
-    <ng-container matColumnDef="icone">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
-          <mat-icon color="primary"> border_color</mat-icon>
-        </button>
-        <button mat-icon-button aria-label="ícone Button" class="icon-spacing">
-          <mat-icon color="warn">delete</mat-icon>
-        </button>
-        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-    </td>
-</ng-container>
-<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+        <!-- Ícone da tabela -->
+        <ng-container matColumnDef="icone">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <button
+                    mat-icon-button
+                    aria-label="ícone Button"
+                    class="icon-spacing"
+                >
+                    <mat-icon color="primary"> border_color</mat-icon>
+                </button>
+                <button
+                    mat-icon-button
+                    aria-label="ícone Button"
+                    class="icon-spacing"
+                >
+                    <mat-icon color="warn">delete</mat-icon>
+                </button>
+                <button
+                    mat-icon-button
+                    [matMenuTriggerFor]="menu"
+                    aria-label="Example icon-button with a menu"
+                >
+                    <mat-icon>more_vert</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
 
-<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selecionar página do produto">
-</mat-paginator>
+    <mat-paginator
+        [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons
+        aria-label="Selecionar página do produto"
+    >
+    </mat-paginator>
 </div>
 
 <mat-menu #menu="matMenu">
-  <button mat-icon-button aria-label="ícone Button" class="iconmenu">
-    <mat-icon class="icon-color">visibility_off</mat-icon>
-    <span>Exibir Produto</span>
-  </button>
-  <button mat-icon-button aria-label="ícone Button" class="iconmenu">
-    <mat-icon class="icon-color">confirmation_number</mat-icon>
-    <span>Tornar Promocional</span>
-  </button>
+    <button mat-icon-button aria-label="ícone Button" class="iconmenu">
+        <mat-icon class="icon-color">visibility_off</mat-icon>
+        <span>Exibir Produto</span>
+    </button>
+    <button mat-icon-button aria-label="ícone Button" class="iconmenu">
+        <mat-icon class="icon-color">confirmation_number</mat-icon>
+        <span>Tornar Promocional</span>
+    </button>
 </mat-menu>
