--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -43,7 +43,7 @@
         <!-- Ícone da tabela -->
         <ng-container matColumnDef="icone">
             <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
+            <td class="layout-menu" mat-cell *matCellDef="let element">
                 <button
                     mat-icon-button
                     aria-label="ícone Button"
