formulario de cadastro da area de login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -74,7 +74,7 @@
       <div class="text-secondary text-center">Don't have an account?</div>
       <div
         class="text-secondary secondary2 text-center"
-        [routerLink]="['/register']"
+        [routerLink]="['/cadastro']"
       >
         Click here to create one
       </div>
