criando componentes de modal e conteúdo de texto

--- a/src/app/pages/agendamentos/agendamentos.component.html
+++ b/src/app/pages/agendamentos/agendamentos.component.html
@@ -6,6 +6,7 @@
     </vex-page-layout-header>
     <vex-page-layout-content vexContainer>
         <div class="card">
+            <button (click)="openDialog()"> AQUIIII</button>
             <mat-tab-group (selectedTabChange)="trocaLegenda($event)">
                 <mat-tab label="Agendamentos">
                     <div class="p-6">
