--- a/src/app/modais/primeiro-login/login-modal/login-modal.component.html
+++ b/src/app/modais/primeiro-login/login-modal/login-modal.component.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Document</title>
+    <title>Cadastro concluído</title>
 </head>
 <body>
     <div class="layout">
@@ -21,8 +21,6 @@
             <button class="rounded-full max-w-full w-200" color="primary" mat-raised-button type="button">
                 Ok, obrigado</button>
         </div>
-
-
     </div>
 </body>
 </html>
