--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.scss
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.scss
@@ -1,35 +1,42 @@
 // STYLE DO FILTRO
-
 .filter {
   display: flex;
   align-items: center;
+  width: 100%;
   justify-content: space-between;
   margin-bottom: 2rem;
+  flex-wrap: wrap;
 
-  .search {
-    width: 100%;
-    max-width: 35rem;
-
-    mat-form-field {
-      border-bottom: 1px solid rgb(38, 43, 57);
-      width: 100%;
+  .pesquisa-opcao {
+    display: flex;
+    width: 55%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .inptPes {
+        width: 300px;
+    }
+    .option {
+      justify-content: right;
     }
   }
 
-  .option {
-    mat-form-field {
-      width: 57%;
-    }
-  }
-
-  .btnAdd {
-    button {
+  .botao-view {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    width: 25%;
+    max-width: 40%;
+    flex-wrap: wrap;
+    .btnAdd{
       background-color: rgb(35, 207, 92);
       color: rgb(240, 255, 255);
     }
+    .viewPag{
+      margin-left: 5%;
+    }
   }
 
-  mat-label {
+  .label{
     color: rgb(38, 43, 57);
   }
 }
