--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -21,7 +21,7 @@
 
   <div class="botao-view">
     <div class="btnAdd">
-      <button mat-button>Adicionar <mat-icon>add</mat-icon></button>
+      <button mat-button (click)="openDialog()">Adicionar <mat-icon>add</mat-icon></button>
     </div>
     <div class="viewPag">
       <button mat-button (click)="vizualizar()">
