adicionando ngOnInit para aparecer o modal na tela

--- a/src/app/modais/primeiro-login/login-modal/login-modal.component.scss
+++ b/src/app/modais/primeiro-login/login-modal/login-modal.component.scss
@@ -36,8 +36,8 @@
 }
 
 .text{  
-    size: 20px;
-    line-height: 20px;
+    font-size: 20px;
+    line-height: 19px;
     text-align: center;
     color: #04588D;
 
@@ -46,7 +46,7 @@
 h1{
     font-size: 32px;
     line-height: 34.3px;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     color: #000C6F;
     margin-left: 28%;
 }
@@ -57,6 +57,6 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 9rem;
+    margin-top: 8rem;
 
 }
