--- a/src/app/modais/primeiro-login/login-modal/login-modal.component.html
+++ b/src/app/modais/primeiro-login/login-modal/login-modal.component.html
@@ -12,13 +12,13 @@
         <div class="text-content">
             <h1>Cadastro concluído!</h1>
             <p class="text">Seja bem-vindo à Easycut!</p>
-            <p class="text">É um prazer ter você no nosso portifólio de parceiros.</p><br>
+            <p class="text">É um prazer ter você em nosso portifólio de parceiros.</p><br>
             <p class="text">Trabalhamos diariamente para garantir um serviço de qualidade e excelência
             , então qualquer dúvida conte conosco!
             </p>
         </div>
         <div class="example-button-row">
-            <button class="rounded-full max-w-full w-200" color="primary" mat-raised-button type="button">
+            <button class="btn" color="primary" mat-raised-button type="button">
                 Ok, obrigado</button>
         </div>
     </div>
