--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -91,7 +91,7 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="botao" stickyEnd>
+        <ng-container matColumnDef="status" stickyEnd>
             <th mat-header-cell *matHeaderCellDef></th>
             <td class="tdsticky" mat-cell *matCellDef="let agendamentos">
                 <mat-form-field
