--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -35,7 +35,7 @@
                         login</mat-error
                     >
                 </mat-form-field>
-                <mat-form-field fxFlex="grow">
+                <mat-form-field class="pass" fxFlex="grow">
                     <mat-label class="password">Senha</mat-label>
                     <input
                         [type]="inputType"
