--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
 }
-.mat-icon-button .mat-icon {
+.pass .mat-icon-button .mat-icon {
     display: flex !important;
     font-size: 24px;
 }
