--- a/src/app/pages/caixa/caixa.component.html
+++ b/src/app/pages/caixa/caixa.component.html
@@ -9,17 +9,17 @@
             <mat-tab-group (selectedTabChange)="trocaLegenda($event)">
                 <mat-tab label="Nova Venda">
                     <div class="p-6">
-                        <nova-venda></nova-venda>
+                        <vex-nova-venda></vex-nova-venda>
                     </div>
                 </mat-tab>
                 <mat-tab label="Fluxo de Caixa">
                     <div class="p-6">
-                        <fluxo-caixa></fluxo-caixa>
+                        <vex-fluxo-caixa></vex-fluxo-caixa>
                     </div>
                 </mat-tab>
                 <mat-tab label="Histórico de vendas">
                     <div class="p-6">
-                        <historico-vendas></historico-vendas>
+                        <vex-historico-vendas></vex-historico-vendas>
                     </div>
                 </mat-tab>
             </mat-tab-group>
