--- a/src/app/modais/primeiro-login/login-modal/login-modal.component.html
+++ b/src/app/modais/primeiro-login/login-modal/login-modal.component.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html lang="pt-br">
     <head>
-        <link
-            href="https://fonts.googleapis.com/icon?family=Material+Icons"
-            rel="stylesheet"
-        />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <title>Cadastro concluído</title>
     </head>
     <body>
@@ -18,7 +15,7 @@
                 <p class="text">
                     É um prazer ter você em nosso portifólio de parceiros.
                 </p>
-                <br />
+                <br/>
                 <p class="text">
                     Trabalhamos diariamente para garantir um serviço de
                     qualidade e excelência , então qualquer dúvida conte
@@ -26,12 +23,7 @@
                 </p>
             </div>
             <div class="example-button-row">
-                <button
-                    class="btn"
-                    color="primary"
-                    mat-raised-button
-                    type="button"
-                >
+                <button class="btn" color="primary" mat-raised-button type="button">
                     Ok, obrigado
                 </button>
             </div>
