--- a/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
+++ b/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
@@ -41,7 +41,7 @@
                 </button>
                 <div
                     class="text-secondary secondary2 text-center"
-                    [routerLink]="['/login']"
+                    [routerLink]="['/login']" id="vlogin"
                 >
                     <u>Voltar para o login</u>
                 </div>
