correcao no nome do service tanto da pasta quanto dos arquivos TS e configuracao no style do filtro de servicos

--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -1,7 +1,7 @@
 <!-- Filtro da tabela de servicos -->
 <div class="filter">
   <div class="pesquisa-opcao" >
-    <div class="search">
+    <div class="pesq">
       <mat-form-field class="inptPes" appearance="standard">
         <mat-label class="label">Pesquisar serviço</mat-label>
         <input matInput >
