pequeno retoque no css dos selects

--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
@@ -49,6 +49,7 @@ table {
   display: flex;
   margin-left: 10px;
   margin-top: 3px;
+  margin-bottom: 2px;
   border-radius: 8px;
 }
 
@@ -58,6 +59,7 @@ table {
   display: flex;
   margin-left: 10px;
   margin-top: 3px;
+  margin-bottom: 2px;
   border-radius: 8px;
 }
 
@@ -67,6 +69,7 @@ table {
   display: flex;
   margin-left: 10px;
   margin-top: 3px;
+  margin-bottom: 2px;
   border-radius: 8px;
 }
 
