formatando o modal de acordo com o padrao

--- a/src/app/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -1,9 +1,8 @@
+<div class="px-6 py-4 border-b" fxLayout="row" fxLayoutAlign="start center">
+  <h2 class="title m-0">Construção</h2>
+</div>
+
 <mat-dialog-content class="modal">
-    <div class="header">
-        <header>
-            <h3>Novo Agendamento</h3>
-        </header>
-    </div>
 
     <form [formGroup]="clientForm">
         <div class="corpoform">
@@ -69,22 +68,23 @@
         </div>
     </form>
 
-    <mat-dialog-actions align="end">
-        <button
-            mat-stroked-button
-            color="primary"
-            class="cadastrar"
-            mat-dialog-close
-        >
-            Cancelar
-        </button>
-        <button
-            mat-stroked-button
-            color="primary"
-            class="cadastrar"
-            (click)="addUser()"
-        >
-            Adicionar
-        </button>
-    </mat-dialog-actions>
+
 </mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button
+      mat-stroked-button
+      color="primary"
+      class="cadastrar"
+      mat-dialog-close
+  >
+      Cancelar
+  </button>
+  <button
+      mat-stroked-button
+      color="primary"
+      class="cadastrar"
+      (click)="addUser()"
+  >
+      Adicionar
+  </button>
+</mat-dialog-actions>
