--- a/src/app/modais/planos/planos-modal/planos.component.html
+++ b/src/app/modais/planos/planos-modal/planos.component.html
@@ -22,8 +22,7 @@
       <button
         class="rounded-full max-w-full w-200"
         mat-raised-button color="primary"
-        type="button"
-      >
+        type="button" [mat-dialog-close]="true">
         CONTRATAR
       </button>
     </div>
@@ -43,8 +42,7 @@
       <button
         class="rounded-full max-w-full w-200"
         mat-raised-button color="primary"
-        type="button"
-      >
+        type="button" [mat-dialog-close]="true">
         CONTRATAR
       </button>
     </div>
@@ -64,7 +62,7 @@
       <button
         class="rounded-full max-w-full w-200"
         mat-raised-button color="primary"
-        type="button">
+        type="button" [mat-dialog-close]="true">
         CONTRATAR
       </button>
     </div>
