--- a/src/app/modais/primeiro-login/login-modal/login-modal.component.html
+++ b/src/app/modais/primeiro-login/login-modal/login-modal.component.html
@@ -23,7 +23,7 @@
                 </p>
             </div>
             <div class="example-button-row">
-                <button class="btn" color="primary" mat-raised-button type="button">
+                <button class="btn" color="primary" mat-raised-button type="button" [mat-dialog-close]="true">
                     Ok, obrigado
                 </button>
             </div>
