--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -17,7 +17,7 @@
         </mat-form-field>
     </div>
     <div class="btnAdd">
-        <button mat-button>Adicionar <mat-icon>add</mat-icon></button>
+        <button mat-button (click)="openAdd()">Adicionar <mat-icon>add</mat-icon></button>
     </div>
     <div class="viewPag">
         <button mat-button (click)="visualizar()">
