--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -5,7 +5,7 @@
 
         <div class="p-6 pb-0" fxLayout="column" fxLayoutAlign="center center">
             <div class="fill-current text-center">
-                <img class="w-16" src="assets/img/demo/logo.svg">
+                <img class="w-16" src="assets/img/demo/logo.svg" alt="logo do estabelecimento">
             </div>
         </div>
 
