--- a/src/app/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.scss
+++ b/src/app/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.scss
@@ -87,7 +87,9 @@ mat-dialog-actions {
 }
 
 .cadastrar {
-  width: 100px;
-  background-color: #c7c7c746;
+  color: white;
+}
+
+.cancelar {
   color: black;
 }
