Alteração das descrições do modal de produtos

--- a/src/app/modais/produto/cadastrar-produto/cadastrar-produto.component.html
+++ b/src/app/modais/produto/cadastrar-produto/cadastrar-produto.component.html
@@ -65,7 +65,7 @@
                 <!-- area de descricao -->
                 <div class="descricao">
                     <mat-form-field class="example-full-width" id="descricao" appearance="standard">
-                        <mat-label>Descrição do serviço</mat-label>
+                        <mat-label>Descrição do produto</mat-label>
                         <input
                             matInput
                             placeholder="Ex. Tipo de corte, tipo de barba..."
@@ -77,7 +77,7 @@
                 <div class="toggle">
                     <mat-slide-toggle
                         ><b
-                            >Este serviço mostrará o valor promocional</b
+                            >Este produto mostrará o valor promocional</b
                         ></mat-slide-toggle
                     >
                 </div>
