--- a/src/app/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -73,6 +73,6 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button color="primary" class="cancelar" mat-dialog-close>Cancelar</button>
-    <button mat-button [mat-dialog-close]="true" mat-raised-button color="primary" 
+    <button [mat-dialog-close]="true" mat-raised-button color="primary" 
     class="cadastrar" (click)="addUser()">Adicionar</button>
 </mat-dialog-actions>
