Feat: Declarando método recuperarSenha

--- a/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
+++ b/src/app/pages/recuperacao-senha/recuperacao-senha.component.html
@@ -31,7 +31,7 @@
                     </mat-error>
                 </mat-form-field>
                 <button
-                    (click)="enviar()"
+                    (click)="recuperarSenha()"
                     class="recSen"
                     color="primary"
                     mat-raised-button
