--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -38,9 +38,9 @@
         <!-- Aplicação do Serviço -->
         <ng-container matColumnDef="aplicacao">
             <th class="color-title" mat-header-cell *matHeaderCellDef>
-                Aplicação
+                Categoria
             </th>
-            <td mat-cell *matCellDef="let element">{{ element.aplicacao }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.categoria }}</td>
         </ng-container>
 
         <!-- Serviço -->
@@ -48,7 +48,7 @@
             <th class="color-title" mat-header-cell *matHeaderCellDef>
                 Nome do Serviço
             </th>
-            <td mat-cell *matCellDef="let element">{{ element.servico }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
         </ng-container>
 
         <!-- Descrição do Serviço -->
@@ -62,13 +62,13 @@
         <!-- Tempo do Serviço -->
         <ng-container matColumnDef="tempo">
             <th class="color-title" mat-header-cell *matHeaderCellDef>Tempo</th>
-            <td mat-cell *matCellDef="let element">{{ element.tempo }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.tempoEstimado }}</td>
         </ng-container>
 
         <!-- Preço do Serviço -->
         <ng-container matColumnDef="preco">
             <th class="color-title" mat-header-cell *matHeaderCellDef>Preço</th>
-            <td mat-cell *matCellDef="let element">{{ element.preco }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.valor }}</td>
         </ng-container>
 
         <!-- Ícone da tabela -->
