--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -29,13 +29,6 @@
 
 <div class="mat-elevation-z8">
     <table aria-label="tabela-produtos" mat-table [dataSource]="dataSource">
-        <!-- Aplicação do produto -->
-        <ng-container matColumnDef="aplicacao">
-            <th class="color-title" mat-header-cell *matHeaderCellDef>
-                Aplicação
-            </th>
-            <td mat-cell *matCellDef="let element">{{ element.aplicacao }}</td>
-        </ng-container>
 
         <!-- Name Produto -->
         <ng-container matColumnDef="nomeProduto">
@@ -43,7 +36,7 @@
                 Nome do Produto
             </th>
             <td mat-cell *matCellDef="let element">
-                {{ element.nomeProduto }}
+                {{ element.nome }}
             </td>
         </ng-container>
 
@@ -60,13 +53,13 @@
             <th class="color-title" mat-header-cell *matHeaderCellDef>
                 Quantidade
             </th>
-            <td mat-cell *matCellDef="let element">{{ element.quantidade }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.qtdEstoque }}</td>
         </ng-container>
 
         <!-- Preço do produto -->
         <ng-container matColumnDef="preco">
             <th class="color-title" mat-header-cell *matHeaderCellDef>Preço</th>
-            <td mat-cell *matCellDef="let element">{{ element.preco }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.valor }}</td>
         </ng-container>
 
         <!-- Ícone da tabela -->
