--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -53,43 +53,43 @@
     <table aria-label="tabela-agendamentos" mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="cliente">
             <th mat-header-cell *matHeaderCellDef>Cliente</th>
-            <td mat-cell *matCellDef="let agendamentos">
-                {{ agendamentos.cliente }}
+            <td mat-cell *matCellDef="let agendamento">
+                {{ agendamento.cliente.nome }}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="servico">
             <th mat-header-cell *matHeaderCellDef>Serviço</th>
-            <td mat-cell *matCellDef="let agendamentos">
-                {{ agendamentos.servico }}
+            <td mat-cell *matCellDef="let agendamento">
+                {{ agendamento.nomeServico }}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="tempo">
             <th mat-header-cell *matHeaderCellDef>Tempo</th>
-            <td mat-cell *matCellDef="let agendamentos">
-                {{ agendamentos.tempo }}
+            <td mat-cell *matCellDef="let agendamento">
+                {{ agendamento.tempoEstimado }}min
             </td>
         </ng-container>
 
         <ng-container matColumnDef="valor">
             <th mat-header-cell *matHeaderCellDef>Valor</th>
-            <td mat-cell *matCellDef="let agendamentos">
-                {{ agendamentos.valor }}
+            <td mat-cell *matCellDef="let agendamento">
+                {{ agendamento.valor | currency }}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="data">
             <th mat-header-cell *matHeaderCellDef>Data</th>
-            <td mat-cell *matCellDef="let agendamentos">
-                {{ agendamentos.data }}
+            <td mat-cell *matCellDef="let agendamento">
+                {{ agendamento.dtAtendimento | date: "dd/MM/YYYY hh:mm" }}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="responsavel">
             <th mat-header-cell *matHeaderCellDef>Responsável</th>
-            <td mat-cell *matCellDef="let agendamentos">
-                {{ agendamentos.responsavel }}
+            <td mat-cell *matCellDef="let agendamento">
+                {{ agendamento.responsavel }}
             </td>
         </ng-container>
 
@@ -98,20 +98,20 @@
             <td
                 class="tdsticky"
                 [class]="
-                    agendamentos.status === 'pendente'
+                    agendamento.status === 'PENDENTE'
                         ? 'pendente'
-                        : agendamentos.status === 'aceito'
+                        : agendamento.status === 'ACEITO'
                         ? 'aceito'
                         : 'recusado'
                 "
                 mat-cell
-                *matCellDef="let agendamentos"
+                *matCellDef="let agendamento"
             >
                 <mat-form-field appearance="standard">
-                    <mat-select [(value)]="agendamentos.status">
-                        <mat-option value="pendente">Pendente</mat-option>
-                        <mat-option value="aceito">Aceito</mat-option>
-                        <mat-option value="recusado">Recusado</mat-option>
+                    <mat-select [(value)]="agendamento.status">
+                        <mat-option value="PENDENTE">Pendente</mat-option>
+                        <mat-option value="ACEITO">Aceito</mat-option>
+                        <mat-option value="RECUSADO">Recusado</mat-option>
                     </mat-select>
                 </mat-form-field>
             </td>
