adicionei na toobar o botao que lista os agendametos do dia

--- a/src/@vex/layout/quickpanel/quickpanel.component.html
+++ b/src/@vex/layout/quickpanel/quickpanel.component.html
@@ -1,5 +1,5 @@
 <div class="body-2 p-6 bg-primary text-primary-contrast">
-    <p>TODAY</p>
+    <p>HOJE</p>
     <div class="display-1">{{ dayName }}</div>
     <div class="display-1">{{ date }}</div>
 </div>
