--- a/src/@vex/layout/toolbar/toolbar.component.html
+++ b/src/@vex/layout/toolbar/toolbar.component.html
@@ -35,6 +35,12 @@
         </div>
 
         <div class="px-1">
+          <button (click)="openQuickpanel()" mat-icon-button type="button">
+            <mat-icon [icIcon]="icDateRange"></mat-icon>
+          </button>
+        </div>
+
+        <div class="px-1">
             <vex-toolbar-user></vex-toolbar-user>
         </div>
     </div>
