--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -116,6 +116,27 @@
                 </mat-form-field>
             </td>
         </ng-container>
+        <!-- Ícone da tabela -->
+        <ng-container matColumnDef="icone">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td class="layout-menu" mat-cell *matCellDef="let element">
+                <button
+                    mat-icon-button
+                    aria-label="ícone Button"
+                    class="icon-spacing"
+                >
+                    <mat-icon color="primary"> border_color</mat-icon>
+                </button>
+                <button
+                    mat-icon-button
+                    aria-label="ícone Button"
+                    class="icon-spacing"
+                >
+                    <mat-icon color="warn">delete</mat-icon>
+                </button>
+               
+            </td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
