finalizando a função deletarProduto e rederizando nova tabela pós deletar

--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -77,6 +77,7 @@
                     mat-icon-button
                     aria-label="ícone Button"
                     class="icon-spacing"
+                    (click)="deletarProduto()"
                 >
                     <mat-icon color="warn">delete</mat-icon>
                 </button>
