Feat (Modal de confirmação): Modal de confirmação criado para exibicao-produtos e exibicao-servicos em seus arquivos .ts e .html

--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -88,6 +88,7 @@
                     mat-icon-button
                     aria-label="ícone Button"
                     class="icon-spacing"
+                    (click)="abrirModalDeletar(element.nome)"
                 >
                     <mat-icon color="warn">delete</mat-icon>
                 </button>
