FEAT: Adicionando modal de confirmação em agendamentos | adicionando botões no body do modal de confirmação

--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -131,6 +131,7 @@
                     mat-icon-button
                     aria-label="ícone Button"
                     class="icon-spacing"
+                    (click)="abrirModalDeletar(element)"
                 >
                     <mat-icon color="warn">delete</mat-icon>
                 </button>
