--- a/src/app/modais/confirmacao/confirmacao.component.html
+++ b/src/app/modais/confirmacao/confirmacao.component.html
@@ -1,4 +1,10 @@
-<h2>{{ data.titulo }}</h2>
-<div>
-  <!-- Conteúdo adicional da modal aqui -->
+<div class="modal-content">
+
+  <h2 class="modal-title">{{ data.titulo }}</h2>
+  
+  <div class="modal-buttons">
+    <button mat-button mat-dialog-close>Cancelar</button>
+    <button mat-button [mat-dialog-close]="true" mat-raised-button color="primary">Confirmar</button>
+  </div>
+
 </div>
