Adição do aria-label na tag <table> para fins de acessibilidade exigido pelo sonar

--- a/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
+++ b/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
@@ -29,7 +29,7 @@
 <div class="tabela_fluxo-caixa">
     <!-- tabela -->
     <div class="example-container mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource">
+        <table mat-table [dataSource]="dataSource" aria-label="tabela dados das vendas e serviços">
 
             <!-- Data -->
             <ng-container matColumnDef="data">
