Criação da requisição de cadastro de produto

--- a/src/app/modais/produto/cadastrar-produto/cadastrar-produto.component.html
+++ b/src/app/modais/produto/cadastrar-produto/cadastrar-produto.component.html
@@ -132,6 +132,7 @@
                 [mat-dialog-close]="true"
                 mat-raised-button
                 color="primary"
+                (click)="cadastrarProduto()"
             >
                 Adicionar
             </button>
