Ajuste dos botões de fluxo de caixa e exibição de produtos(extra)

--- a/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
+++ b/src/app/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
@@ -18,7 +18,7 @@
         </mat-form-field>
     </div>
     <div class="btnAdd">
-        <button mat-button>Adicionar venda</button>
+        <button mat-button>Adicionar venda <mat-icon>add</mat-icon></button>
     </div>
     <div class="icon-csv">
         <img src="../../../../assets/img/csv.svg" alt="icone csv">
@@ -68,7 +68,7 @@
             <h3>Total Cancelado: <span>R$180,00</span></h3>
         </div>
         <div class="btn">
-            <button mat-button class="btn-fechar_caixa">Fechar caixa</button>
+            <button mat-button class="btn-fechar_caixa" mat-raised-button color="primary">Fechar caixa</button>
         </div>
     </div>
 </div>
