--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.scss
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.scss
@@ -30,6 +30,7 @@
     .btnAdd{
       background-color: rgb(35, 207, 92);
       color: rgb(240, 255, 255);
+      border-radius: 5px;
     }
     .viewPag{
       margin-left: 5%;
