Atualização dos botões dos filtros de telas para "primary"

--- a/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
+++ b/src/app/pages/servicos/exibicao-produtos/exibicao-produtos.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="botao-view">
     <div class="btnAdd">
-      <button mat-button (click)="openAdd()">Adicionar <mat-icon>add</mat-icon></button>
+      <button mat-button mat-raised-button color="primary" (click)="openAdd()">Adicionar <mat-icon>add</mat-icon></button>
   </div>
   <div class="viewPag">
       <button mat-button (click)="visualizar()">
