--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -42,7 +42,7 @@
         <button mat-button>Limpar <mat-icon>backspace</mat-icon></button>
     </div>
     <div class="btnAdd">
-        <button mat-button (click)="openDialog()">
+        <button mat-button mat-raised-button color="primary" (click)="openDialog()">
             Adicionar <mat-icon>add</mat-icon>
         </button>
     </div>
