--- a/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
+++ b/src/app/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
@@ -27,10 +27,7 @@
   }
 
   .btnAdd {
-    button {
-      background-color: rgb(35, 207, 92);
-      color: rgb(240, 255, 255);
-    }
+    border-radius: 5px;
   }
 
   mat-label {
