--- a/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -21,7 +21,7 @@
 
     <div class="botao-view">
         <div class="btnAdd">
-            <button mat-button (click)="openDialog()">
+            <button mat-button mat-raised-button color="primary" (click)="openDialog()">
                 Adicionar <mat-icon>add</mat-icon>
             </button>
         </div>
